# my_rust_redis

./: .gitignore  Cargo.toml  README.md  checklist.md  dump.rdb
legacy/: commands.rs  connection.rs  replica.rs  server.rs  server_legacy.rs
legacy/handlers/: replication_handlers.rs
src/: app_state.rs  args.rs  command.rs  command_handler.rs  commands.rs  config.rs  connection.rs  connection_manager.rs  database.rs  lib.rs  main.rs  main_legacy.rs  message_processer.rs  model.rs  replica.rs  replica_client.rs  replication.rs  resp.rs  serializer.rs  server.rs  server_legacy.rs  utilities.rs  writer.rs
tests/: del_handler_test.rs  expire_handler_test.rs  get_handler_test.rs  hash_del_handler_test.rs  hash_exists_handler_test.rs  hash_get_handler_test.rs  hash_hexists_handler_test.rs  hash_hget_handler_test.rs  hash_hgetall_handler_test.rs  hash_hlen_handler_test.rs  hash_hset_handler_test.rs  hash_hvals_handler_test.rs  hash_mset_handler_test.rs  hash_set_handler_test.rs  hdel_handler_test.rs  hget_handler_test.rs  hgetall_handler_test.rs  hkeys_handler_test.rs  hlen_handler_test.rs  hmset_handler_test.rs  hset_handler_test.rs  hvals_handler_test.rs  key_expire_handler_test.rs  key_get_handler_test.rs  key_handlers_test.rs  key_rename_handler_test.rs  key_set_handler_test.rs  key_type_handler_test.rs  keys_handler_test.rs  lindex_handler_test.rs  list_rpop_handler_test.rs  list_rpush_handler_test.rs  list_set_handler_test.rs  llen_handler_test.rs  lpop_handler_test.rs  lpush_handler_test.rs  lrem_handler_test.rs  lset_handler_test.rs  main.rs  rename_handler_test.rs  (+6 more)
(+109 files in other folders)
