# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"                                   # error handling
base64 = "0.22.1"
bincode = "1.3.3"
byteorder = "1.5.0"
bytes = "1.3.0"                                     # helps manage buffers
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
crc64 = "2.0.0"
hex = "0.4.3"
lazy_static = "1.5.0"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }

serde_json = "1.0.128"
structopt = "0.3.26"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
